# governance

./: CONTRIBUTING.rst  HACKING.rst  README.rst  openswitch-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/governance/: bug-czar.rst  contributor-licensing-agreements.rst  contributor-onboarding.rst  core-reviewers.rst  election-process.rst  index.rst  maintainers.rst  project-leader.rst  release-management.rst
openswitch_governance/: __init__.py
openswitch_governance/tests/: base.py  test_openswitch_governance.py
