[metadata]
name = openswitch-governance
summary = "OpenSwitch Governance"
description-file =
    README.rst
author = OpenSwitch
home-page = http://review.openswitch.net/
classifier =
    Environment :: OpenSwitch
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    openswitch-governance

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openswitch-governance/locale
domain = governance

[update_catalog]
domain = governance
output_dir = openswitch-governance/locale
input_file = openswitch-governance/locale/governance.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openswitch-governance/locale/governance.pot
